--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@urql/core": "^1.12.1",
+    "@urql/svelte": "^0.3.0",
+    "apollo-boost": "^0.4.9",
     "compression": "^1.7.1",
+    "graphql": "^15.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "polka": "next",
     "sirv": "^0.4.0"
   },
